--- a/resources/client/css/styles.css
+++ b/resources/client/css/styles.css
@@ -10,7 +10,13 @@ body {
     width: 180px;
     height: 30px;
 }
-
+table,th,td {
+    border : 1px solid black;
+    border-collapse: collapse;
+}
+th,td {
+    padding: 5px;
+}
 
 
 
